--- a/Assets/css/index.styles.css
+++ b/Assets/css/index.styles.css
@@ -1,4 +1,6 @@
-
+body {
+    overflow-x: hidden;
+}
 
 section {
     width: 100%;
@@ -6,7 +8,11 @@ section {
 }
 
 
-
+.nav-bar {
+    margin-top: 2rem;
+    z-index: 999;
+    position: fixed;
+}
 
 .navbar-brand {
     margin-left: 4rem;
@@ -15,6 +21,7 @@ section {
 
 .navigation-bar {
     margin-right: 5rem;
+
 }
 
 .navigation-bar li {
@@ -29,20 +36,64 @@ i {
 }
 
 
-/* .bg-curcle {
-    width: 50rem;
-    height: 50rem;
-    background-color: #FFC43D;
-    border-radius: 100%;
+.bg-curcle {
+    border-radius: 50rem 50rem 50rem 50rem;
+
+
 
     position: absolute;
-    display: flex;
+    width: 1128px;
+    height: 1128px;
+    left: 1250px;
+    top: -360px;
+
+    background-color: #FFC43D;
 
 
-} */
+
+}
 
 .header-container {
     margin: 5rem auto;
+
+}
+.header-container>h1{
+    font-size: 40px;
+    font-weight: 700;
+}
+.header-container>button{
+    margin-top: 2rem;
+    font-weight: 700;
+    width: 10rem;
+    height: 3rem;
+    border-radius: 4rem;
+    font-size: 20px;
+}
+
+.header-container-photo {
+    display: flex;
+    left: 0;
+    margin-top: -3rem;
+    width: 25rem;
+    height: 25rem;
+}
+
+.header-container-photo>img {
+    position: absolute;
+    left: 0;
+    height: 25rem;
+    width: 25rem;
+
+}
+
+.navBtn-main {
+    color: #000000;
+    border: none;
+    font-weight: 500;
+}
+
+.navBtn-main:hover {
+    color: #FCA311;
 }
 
 /* main bg img */
@@ -65,7 +116,9 @@ i {
     font-size: 2rem;
     color: #FF7B00 !important;
 }
-
+.homepage-card{
+   margin-top: -15rem;
+}
 .box {
     width: 2rem;
     height: 2rem;
@@ -97,28 +150,35 @@ i {
     background-size: cover;
     /* background-image: url(../Img/items/tandem-x-visuals-2yNMsw-A2eI-unsplash.jpg); */
 }
-.shop-item-button{
-     color: #FF7B00;
-     font-size: 3rem;
-     
+
+.shop-item-button {
+    color: #FF7B00;
+    font-size: 3rem;
+
 }
-.shop-item-button:hover{
-    color:#FCA311;
+
+.shop-item-button:hover {
+    color: #FCA311;
 }
-.shop-item-price{
+
+.shop-item-price {
     font-weight: 700;
 }
-.shop-item-title{
+
+.shop-item-title {
     text-align: center;
 }
-.cart-item-button{
+
+.cart-item-button {
     font-size: 2rem;
-   
+
 }
-.cart-quantity-input{
+
+.cart-quantity-input {
     height: rem;
     width: 3rem;
 }
+
 .cart-cards {
     box-shadow: 2px 24px 39px -13px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 2px 24px 39px -13px rgba(0, 0, 0, 0.2);
@@ -126,20 +186,20 @@ i {
     border: 1px solid rgba(0, 0, 0, 0.014);
 }
 
-.cart-cards:hover{
- transition: all 300ms ease-in-out;
-  border: 1px solid #FF7B00 !important;
+.cart-cards:hover {
+    transition: all 300ms ease-in-out;
+    border: 1px solid #FF7B00 !important;
 }
 
-.cart-cards:focus{
- background-color: #FF7B00 !important;
+.cart-cards:focus {
+    background-color: #FF7B00 !important;
 }
 
-.cart-item-cols{
+.cart-item-cols {
     margin: 0.5rem 0;
 }
 
-.cash-out{
+.cash-out {
     margin-top: 2rem;
     width: 100%;
     height: 4rem;
@@ -148,71 +208,69 @@ i {
     padding: 5%;
 }
 
-.text-alines{
+.text-alines {
     text-align: right;
 }
 
-.dash-line{
+.dash-line {
     border-top: 2px dashed;
     margin: 1rem 3%;
 
 }
 
 
-.cart-text-styles{
+.cart-text-styles {
     font-weight: bold;
     color: black;
 }
 
-.pay-btn{
+.pay-btn {
     width: 100% !important;
     background-color: #FF7B00;
     border: none;
 }
 
-.pay-btn:hover{
+.pay-btn:hover {
     width: 100% !important;
     background-color: #FFC43D;
     border: none;
 
-   
+
 
 }
 
-.pay-btn-holder{
+.pay-btn-holder {
     margin: 1rem auto;
-   
-}
-
-
-.head-text{
-color: #FF7B00;
 
 }
-.btn-main{
+
+
+.head-text {
+    color: #FF7B00;
+
+}
+
+.btn-main {
     background-color: #FF7B00;
     border: none;
     font-weight: 500;
 }
-.btn-main:hover{
+
+.btn-main:hover {
     background-color: #FCA311;
 }
-.navBtn-main{
-    color: #FF7B00;
-    border: none;
-    font-weight: 500;
-}
-.navBtn-main:hover{
-    color: #FCA311;
-}
-.card-img-top{
+
+
+.card-img-top {
     height: 14rem;
     border-radius: 0rem 1.5rem 0rem 1.5rem;
 }
-.item-cart{
+
+.item-cart {
 
     border-radius: 0rem 1.5rem 0rem 1.5rem;
 }
-.product-item-container{
-    margin: 2.5rem 0 ;
+
+.product-item-container {
+    margin: 2.5rem 0;
 }
