--- a/Assets/css/index.styles.css
+++ b/Assets/css/index.styles.css
@@ -4,7 +4,7 @@ body {
 
 section {
     width: 100%;
-    height: 55rem;
+    height: 60rem;
 }
 
 
@@ -56,12 +56,19 @@ i {
 .header-container {
     margin: 5rem auto;
 
+
 }
-.header-container>h1{
+
+.header-container-text {
+    margin-left: 6rem;
+}
+
+.header-container>h1 {
     font-size: 40px;
     font-weight: 700;
 }
-.header-container>button{
+
+.header-container>button {
     margin-top: 2rem;
     font-weight: 700;
     width: 10rem;
@@ -96,7 +103,66 @@ i {
     color: #FCA311;
 }
 
+#aboutUs {
+    margin-top: 5rem;
+}
+
+.bg-curcle-2 {
+    border-radius: 50rem 50rem 50rem 50rem;
+
+
+
+    position: absolute;
+    width: 1100px;
+    height: 1100px;
+    left: -350px;
+    top: 1250px;
+
+    background-color: #FFC43D;
+}
+#products{
+position: relative;
+background-color: white;
+}
+.product-head-text{
+  margin-top: 5rem;
+}
+.bg-curcle-3{
+    border-radius: 50rem 50rem 50rem 50rem;
+
+
+
+    position: absolute;
+    width: 900px;
+    height: 900px;
+    left: 100px;
+    top: 100px;
+
+    background-color: #FF7B00;
+    opacity: 25%;
+}
+
+.aboutus-img{
+    position: relative;
+    transform: scaleX(-1);
+    display: flex;
+    margin-top: 15rem;
+    bottom: 0;
+    width: 55rem;
+    width: 55rem;
+}
+.about-us-text{
+    margin-left: 5rem;
+}
+.about-us-text>h2{
+    margin-top: 14rem;
+}
+.about-us-text-head{
+    font-size: 4rem;
+    margin-left: 5rem;
+}
 /* main bg img */
+
 .car-img {
     transform: scaleX(-1);
 }
@@ -116,9 +182,11 @@ i {
     font-size: 2rem;
     color: #FF7B00 !important;
 }
-.homepage-card{
-   margin-top: -15rem;
+
+.homepage-card {
+    margin-top: -15rem;
 }
+
 .box {
     width: 2rem;
     height: 2rem;
@@ -247,7 +315,7 @@ i {
 
 .head-text {
     color: #FF7B00;
-
+    
 }
 
 .btn-main {
