--- a/Assets/css/index.styles.css
+++ b/Assets/css/index.styles.css
@@ -1,12 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 body {
     overflow-x: hidden;
 }
 
-section {
-    width: 100vw;
-    height: 60rem;
-}
 
+
+#contactUs #aboutus #home #products{
+    width: 100vw;
+height: 60rem;
+}
 
 .sticky {
     background: #FFC43D;
@@ -14,6 +16,7 @@ section {
     padding: 15px 0;
     box-shadow: 0px 3px 10px 1px rgb(1 64 73 / 64%);
 }
+
 .navbar-brand {
     margin-left: 4rem;
     font-weight: bold;
@@ -116,14 +119,20 @@ i {
 
     background-color: #FFC43D;
 }
-#products{
-position: relative;
-background-color: white;
+
+#products {
+    margin-top: -10rem;
+    position: relative;
+    background-color: white;
+    height: 73rem;
+    width: 100vw;
 }
-.product-head-text{
-  margin-top: 5rem;
+
+.product-head-text {
+    margin-top: 5rem;
 }
-.wooden-circle-2{
+
+.wooden-circle-2 {
     width: 20rem;
     height: 20rem;
     transform: scaleX(-1);
@@ -132,7 +141,8 @@ background-color: white;
     margin-left: 45rem;
     bottom: -65rem;
 }
-.bg-curcle-3{
+
+.bg-curcle-3 {
     border-radius: 50rem 50rem 50rem 50rem;
 
 
@@ -147,7 +157,7 @@ background-color: white;
     opacity: 25%;
 }
 
-.aboutus-img{
+.aboutus-img {
     position: relative;
     transform: scaleX(-1);
     display: flex;
@@ -156,16 +166,20 @@ background-color: white;
     width: 55rem;
     width: 55rem;
 }
-.about-us-text{
+
+.about-us-text {
     margin-left: 5rem;
 }
-.about-us-text>h2{
+
+.about-us-text>h2 {
     margin-top: 14rem;
 }
-.about-us-text-head{
+
+.about-us-text-head {
     font-size: 4rem;
     margin-left: 5rem;
 }
+
 /* main bg img */
 
 .car-img {
@@ -322,7 +336,7 @@ background-color: white;
 
 .head-text {
     color: #FF7B00;
-    
+
 }
 
 .btn-main {
@@ -334,7 +348,8 @@ background-color: white;
 .btn-main:hover {
     background-color: #FCA311;
 }
-.shop-item-image{
+
+.shop-item-image {
     height: 12rem;
     border-radius: 0rem 1.5rem 0rem 1.5rem;
 }
@@ -343,14 +358,298 @@ background-color: white;
     box-shadow: 2px 24px 39px -13px rgba(0, 0, 0, 0.2);
     border-radius: 0rem 1.5rem 0rem 1.5rem;
 }
+
 .item-cart:hover {
     box-shadow: 2px 24px 39px -13px rgba(0, 0, 0, 0.4);
-   
+
 }
+
 .product-item-container {
     margin: 2.5rem 0;
 }
 
-.see-more-btn{
+.see-more-btn {
     margin-top: 3rem;
+}
+
+/* swiper */
+
+.swiper {
+    margin: 2rem auto;
+    width: 90%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.testamonial{
+    margin: 5rem auto;
+    width: 50rem;
+    box-shadow: 0px 3px 10px 1px rgb(1 64 73 / 10%);
+    border-radius: 1rem;
+}
+.testamonial-img{
+    margin: 1rem;
+    width:150px;
+    height: 120px;
+}
+.testamonial-img>img{
+   
+    border-radius: 50rem;
+    
+}
+.testamonial-contet{
+    margin-left: 1rem;
+    
+    margin-right: 1rem;
+}
+#testamonial{
+    height: 50%;
+}
+#contactUs{
+    margin-top:0rem;
+}
+.contactus-head{
+    margin-top: 6rem;
+   
+}
+.contact-text{
+    text-align: center;
+    font-size: 3rem;
+}
+/* form */
+.contact-container{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.contact-item-container {
+    width: 50%;
+    height: 90%;
+    background-color: #FFC43D;
+
+}
+
+
+.screen {
+    margin: 4rem 1rem;
+    position: relative;
+    border-radius: 15px;
+}
+
+.screen:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 20px;
+    right: 20px;
+    bottom: 0;
+    border-radius: 15px;
+    box-shadow: 0 10px 40px #666666;
+    z-index: -1;
+}
+
+.screen-header {
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+    background: #4d4d4f;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+.screen-header-left {
+    margin-right: auto;
+}
+
+.screen-header-button {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    margin-right: 3px;
+    border-radius: 8px;
+    background: white;
+}
+
+
+
+.screen-header-right {
+    display: flex;
+}
+
+.screen-header-ellipsis {
+    width: 3px;
+    height: 3px;
+    margin-left: 2px;
+    border-radius: 8px;
+    background: #999;
+}
+
+.screen-body {
+    display: flex;
+}
+
+.screen-body-item {
+    flex: 1;
+    padding: 50px;
+}
+
+.screen-body-item.left {
+    display: flex;
+
+    flex-direction: column;
+}
+
+.app-title {
+
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    color: #ea1d6f;
+    font-size: 40px;
+
+}
+
+.app-title:after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    width: 25px;
+    height: 4px;
+    background: #ea1d6f;
+}
+
+.app-contact {
+    margin-top: auto;
+    font-size: 8px;
+    color: #888;
+}
+
+.app-form-group {
+    margin-bottom: 15px;
+}
+
+.app-form-group.message {
+    margin-top: 40px;
+}
+
+.app-form-group.buttons {
+    margin-bottom: 0;
+    text-align: right;
+}
+
+.app-form-control {
+    width: 100%;
+    padding: 10px 0;
+    background: none;
+    border: none;
+    border-bottom: 1px solid #ffffff;
+    color: rgb(0, 0, 0);
+    font-size: 14px;
+    text-transform: uppercase;
+    outline: none;
+    transition: border-color .2s;
+    font-family: 'Poppins', sans-serif !important;
+}
+
+.app-form-control::placeholder {
+    color: #1f1f1f;
+}
+
+.app-form-control:focus {
+    border-bottom-color: rgb(36, 36, 36);
+}
+
+.app-form-button {
+    background: none;
+    border: none;
+    color: rgb(0, 0, 0);
+    font-size: 14px;
+    cursor: pointer;
+    outline: none;
+}
+
+.app-form-button:hover {
+    color: #ffffff;
+}
+
+.credits {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    color: #ffa4bd;
+    font-family: 'Poppins', sans-serif !important;
+    font-size: 16px;
+    font-weight: normal;
+}
+
+.credits-link {
+    display: flex;
+    align-items: center;
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.dribbble {
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+}
+
+@media screen and (max-width: 520px) {
+    .screen-body {
+        flex-direction: column;
+    }
+
+    .screen-body-item.left {
+        margin-bottom: 30px;
+    }
+
+    .app-title {
+        flex-direction: row;
+    }
+
+    .app-title span {
+        margin-right: 12px;
+    }
+
+    .app-title:after {
+        display: none;
+    }
 }
