--- a/Assets/css/responsive.css
+++ b/Assets/css/responsive.css
@@ -1,13 +1,170 @@
-@media (max-width: 1024px) {
-    .bg-curcle {
-       
+/*mobile*/
+@media all and (min-width: 50px) and (max-width: 375px) {
+    body {
+        overflow-x: hidden;
+    }
+    .header-container-text {
+        font-size: 1.5rem !important;
+        display: flex;
+        margin: auto;
+        width: 15rem;
+        margin-bottom: 1rem;
+    }
 
-        position: absolute;
-        width: 1128px;
-        height: 1128px;
-        left: 550px;
-        top: -500px;
+    .header-container-text-2 {
+        font-size: 1rem !important;
+    }
+
+    .car-img {
+        display: none;
+    }
+
+    .header-container>button {
+        align-items: center;
+        justify-content: center;
+    }
+    .header-container>button {
+        font-size: 1.1rem !important;
+    }
+    .header-container-photo>img {
+       opacity: 80%;
+        margin-top: auto;
+        width: 20rem !important;
+        height: 20rem !important;
+    }
+
+    .homepage-card {
+        margin-top: -22rem;
+    }
+
+    .card-styl {
+        opacity: 45%;
+        height: 9rem;
+        margin-bottom: 1rem;
+    }
+    /* .card-icon{
+        display: flex;
+        justify-content: center;
+    } */
+
+    .bg-curcle-2 {
+        opacity: 80%;
+        left: -2rem;
+        width: 15rem;
+        height: 15rem;
+    }
+
+    .bg-curcle-2>div {
+        left: 5rem;
+        top: 5rem;
+        width: 13rem;
+        height: 13rem;
+    }
+
+    .aboutus-img {
+        opacity: 80%;
+        margin-top: -2.5rem;
+        left: -5rem;
+        width: 23rem;
+    }
+    .about-us-text{
+        width: fit-content;
+        margin-top: -13rem !important;
+    }
+    .about-us-text-head{
+        margin-top: 13rem;
+        font-size: 1.8rem;
+        font-weight: 700;
+    }
+    .about-us-text{
+        position: relative;
+        
+    }
+    .about-us-text-2{
+        margin-left: -3.5rem;
+        margin-top: 15rem !important;
+        width: 15rem;
+        font-size: 1rem !important;
+    }
+   .head-text{
+    text-align: center;
+    width: fit-content;
+   }
+    #products{
+        height: fit-content;
+    }
+    .product-cards{
+        margin-bottom: 1rem;
+    }
+    .shop-item-button{
+        position: relative;
+        width: fit-content;
+        display: flex;
+        top:0 !important;
+        left: 15rem !important;
+    }
+    .see-more-btn{
+        position: relative;
+        display: flex;
+        right: -15rem !important;
+        width: fit-content;
+    }
+    .testamonial-head{
+        margin-top: 2rem;
+    }
+    .testamonial-head>h2{
+        font-size: 2rem;
+        text-align: center;
+    }
+    .testamonial-head>h3{
+        font-size: 1rem;
+        text-align: center;
+    }
+    .testamonial-contet{
+        width: fit-content;
+    }
+    .mySwiper,.swiper-slide{
+        margin-top: auto;
+    }
+    .testamonial{
+        margin-top: auto;
+    }
+    .contact-text{
+        width: fit-content;
+        font-size: 2rem;
+    }
+    .contact-item-container{
+        margin: auto;
+    }
+    .contact-item-container{
+        display: flex;
+        position: relative;
+        width: 100% !important;
+        height: 70% !important;
+    }
+   
+    .screen-body,.screen-body-item,.app-form-group{
     
-       
+        width: fit-content;
+        left: 10rem !important;
+    }  
+    .app-form-group{
+        left: 0;
+    }
+    .app-form-control {
+        width: 15rem;
+        position: relative;
+        left: -5rem !important;
     }
 }
+
+@media all and (min-width: 375px) and (max-width: 425px) {}
+
+/*tablet*/
+rgb(0, 0, 0) @media all and (min-width: 425px) and (max-width: 768px) {}
+
+/*laptop (M)*/
+@media all and (min-width: 768px) and (max-width: 1024px) {}
+
+/*laptop (L)*/
+@media all and (min-width: 1024px) and (max-width: 1440px) {}
