--- a/Assets/css/index.styles.css
+++ b/Assets/css/index.styles.css
@@ -477,7 +477,7 @@ i {
     right: 20px;
     bottom: 0;
     border-radius: 15px;
-    box-shadow: 0 10px 40px #666666;
+    /* box-shadow: 0 10px 40px #666666; */
     z-index: -1;
 }
 
