--- a/Assets/css/responsive.css
+++ b/Assets/css/responsive.css
@@ -3,6 +3,7 @@
     body {
         overflow-x: hidden;
     }
+
     .header-container-text {
         font-size: 1.5rem !important;
         display: flex;
@@ -23,11 +24,13 @@
         align-items: center;
         justify-content: center;
     }
+
     .header-container>button {
         font-size: 1.1rem !important;
     }
+
     .header-container-photo>img {
-       opacity: 80%;
+        opacity: 80%;
         margin-top: auto;
         width: 20rem !important;
         height: 20rem !important;
@@ -42,6 +45,7 @@
         height: 9rem;
         margin-bottom: 1rem;
     }
+
     /* .card-icon{
         display: flex;
         justify-content: center;
@@ -67,101 +71,582 @@
         left: -5rem;
         width: 23rem;
     }
-    .about-us-text{
+
+    .about-us-text {
         width: fit-content;
-        margin-top: -13rem !important;
+        margin-top: -12rem !important;
     }
-    .about-us-text-head{
+
+    .about-us-text-head {
         margin-top: 13rem;
+        position: relative;
+        margin-left: 6rem;
+        width: 15rem;
         font-size: 1.8rem;
         font-weight: 700;
     }
-    .about-us-text{
+
+    .about-us-text {
         position: relative;
-        
+        margin-bottom: 6rem !important;
     }
-    .about-us-text-2{
+
+    .about-us-text-2 {
         margin-left: -3.5rem;
         margin-top: 15rem !important;
         width: 15rem;
         font-size: 1rem !important;
     }
-   .head-text{
-    text-align: center;
-    width: fit-content;
-   }
-    #products{
+
+    .head-text {
+        text-align: center;
+        width: fit-content;
+        margin-bottom: 1rem !important;
+    }
+
+    #products {
         height: fit-content;
     }
-    .product-cards{
+
+    .product-container>h3 {
+        font-size: large;
+        text-align: center;
+        margin-bottom: 0.5rem;
+    }
+
+    .product-container>p {
+        text-align: center;
+        width: 90%;
+    }
+
+    .product-head-text {
+        margin: auto;
+        text-align: center !important;
+    }
+
+    .product-cards {
         margin-bottom: 1rem;
     }
-    .shop-item-button{
+
+    .shop-item-button {
         position: relative;
         width: fit-content;
         display: flex;
-        top:0 !important;
+        top: 0 !important;
         left: 15rem !important;
     }
-    .see-more-btn{
+
+    .see-more-btn {
         position: relative;
         display: flex;
         right: -15rem !important;
         width: fit-content;
     }
-    .testamonial-head{
+
+    .testamonial-head {
         margin-top: 2rem;
     }
-    .testamonial-head>h2{
+
+    .testamonial-head>h2 {
         font-size: 2rem;
         text-align: center;
     }
-    .testamonial-head>h3{
+
+    .testamonial-head>h3 {
         font-size: 1rem;
         text-align: center;
     }
-    .testamonial-contet{
+
+    .testamonial-contet {
         width: fit-content;
     }
-    .mySwiper,.swiper-slide{
+
+    .mySwiper,
+    .swiper-slide {
         margin-top: auto;
     }
-    .testamonial{
+
+    .testamonial {
         margin-top: auto;
     }
-    .contact-text{
+
+    .contactus-head {
+        margin-top: auto;
+    }
+
+    .contactus-head>p {
+        font-size: 1.5rem;
+    }
+
+    .contact-text {
         width: fit-content;
         font-size: 2rem;
     }
-    .contact-item-container{
+
+    .screen-body-item.left {
         margin: auto;
     }
-    .contact-item-container{
+    .screen-body-item{
+        margin: -2rem;
+        margin-bottom: 1rem;
+        padding: auto;
+    }
+    .contact-item-container.center {
+    }
+    .contact-item-container {
         display: flex;
         position: relative;
         width: 100% !important;
         height: 70% !important;
     }
+
    
-    .screen-body,.screen-body-item,.app-form-group{
-    
-        width: fit-content;
-        left: 10rem !important;
-    }  
-    .app-form-group{
-        left: 0;
+    .screen{
+        margin-top: -1rem;
     }
-    .app-form-control {
+    
+    
+    
+}
+
+@media all and (min-width: 375px) and (max-width: 425px) {
+    body {
+        overflow-x: hidden;
+    }
+
+    .header-container-text {
+        font-size: 1.5rem !important;
+        display: flex;
+        margin: auto;
+        width: 20rem;
+        margin-bottom: 1rem;
+    }
+
+    .header-container-text-2 {
+        font-size: 1rem !important;
+    }
+
+    .car-img {
+        display: none;
+    }
+
+    .header-container>button {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header-container>button {
+        font-size: 1.1rem !important;
+    }
+
+    .header-container-photo>img {
+        opacity: 80%;
+        margin-top: auto;
+        width: 20rem !important;
+        height: 20rem !important;
+    }
+
+    .homepage-card {
+        margin-top: -22rem;
+    }
+
+    .card-styl {
+        opacity: 45%;
+        height: 9rem;
+        margin-bottom: 1rem;
+    }
+
+    /* .card-icon{
+        display: flex;
+        justify-content: center;
+    } */
+
+    .bg-curcle-2 {
+        opacity: 80%;
+        left: -2rem;
         width: 15rem;
+        height: 15rem;
+    }
+
+    .bg-curcle-2>div {
+        left: 5rem;
+        top: 5rem;
+        width: 13rem;
+        height: 13rem;
+    }
+
+    .aboutus-img {
+        opacity: 80%;
+        margin-top: -2.5rem;
+        left: -5rem;
+        width: 23rem;
+    }
+
+    .about-us-text {
+        width: fit-content;
+        margin-top: -12rem !important;
+    }
+
+    .about-us-text-head {
+        margin-top: 13rem;
         position: relative;
-        left: -5rem !important;
+        margin-left: 6rem;
+        width: 15rem;
+        font-size: 1.8rem;
+        font-weight: 700;
+    }
+
+    .about-us-text {
+        position: relative;
+        margin-bottom: 6rem !important;
+    }
+
+    .about-us-text-2 {
+        margin-left: -3.5rem;
+        margin-top: 15rem !important;
+        width: 20rem;
+        font-size: 1rem !important;
+    }
+
+    .head-text {
+        text-align: center;
+        width: fit-content;
+        margin-bottom: 1rem !important;
+    }
+
+    #products {
+        height: fit-content;
+    }
+    .product-container>h2{
+        position: relative;
+        left: -1rem;
+    }
+    .product-container>h3 {
+        font-size: large;
+        text-align: center;
+        margin-bottom: 0.5rem;
+        position: relative;
+        left: -1rem;
+        
+    }
+
+    .product-container>p {
+        text-align: center;
+        width: 90%;
+    }
+
+    .product-head-text {
+        margin: auto;
+        text-align: center !important;
+    }
+
+    .product-cards {
+        position: relative;
+        left: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    .shop-item-button {
+        position: relative;
+        width: fit-content;
+        display: flex;
+        top: 0 !important;
+        left: 15rem !important;
+    }
+
+    .see-more-btn {
+        position: relative;
+        display: flex;
+        right: -15rem !important;
+        width: fit-content;
+    }
+
+    .testamonial-head {
+        margin-top: 2rem;
+    }
+
+    .testamonial-head>h2 {
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    .testamonial-head>h3 {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    .testamonial-contet {
+        width: fit-content;
+    }
+
+    .mySwiper,
+    .swiper-slide {
+        margin-top: auto;
+    }
+
+    .testamonial {
+        margin-top: auto;
+    }
+
+    .contactus-head {
+        margin-top: auto;
+    }
+
+    .contactus-head>p {
+        font-size: 1.5rem;
+    }
+
+    .contact-text {
+        width: 15rem;
+        font-size: 2rem;
+        
+    }
+    .screen:after {
+        width: 128%;
+        height: 122%;
+        margin-left: -2.2rem;
+    }
+    .screen-body-item.left {
+        margin: auto;
+    }
+    .screen-body-item{
+        margin: -2rem;
+        margin-bottom: 1rem;
+        padding: auto;
+    }
+    
+    .contact-item-container {
+        display: flex;
+        position: relative;
+        width: 100% !important;
+        height: 70% !important;
+    }
+
+   
+    .screen{
+        margin-top: -1rem;
     }
 }
 
-@media all and (min-width: 375px) and (max-width: 425px) {}
-
 /*tablet*/
-rgb(0, 0, 0) @media all and (min-width: 425px) and (max-width: 768px) {}
+@media all and (min-width: 425px) and (max-width: 768px) {
+    body {
+        overflow-x: hidden;
+    }
+
+    .header-container-text {
+        font-size: 1.5rem !important;
+        display: flex;
+        margin: auto;
+        width: 20rem;
+        margin-bottom: 1rem;
+    }
+
+    .header-container-text-2 {
+        font-size: 1rem !important;
+    }
+
+    .car-img {
+        display: none;
+    }
+
+    .header-container>button {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header-container>button {
+        font-size: 1.1rem !important;
+    }
+
+    .header-container-photo>img {
+        opacity: 80%;
+        margin-top: auto;
+        width: 20rem !important;
+        height: 20rem !important;
+    }
+
+    .homepage-card {
+        margin-top: -22rem;
+    }
+
+    .card-styl {
+        opacity: 45%;
+        height: 9rem;
+        margin-bottom: 1rem;
+    }
+
+    /* .card-icon{
+        display: flex;
+        justify-content: center;
+    } */
+
+    .bg-curcle-2 {
+        opacity: 80%;
+        left: -2rem;
+        width: 15rem;
+        height: 15rem;
+    }
+
+    .bg-curcle-2>div {
+        left: 5rem;
+        top: 5rem;
+        width: 13rem;
+        height: 13rem;
+    }
+
+    .aboutus-img {
+        opacity: 80%;
+        margin-top: -2.5rem;
+        left: -5rem;
+        width: 23rem;
+    }
+
+    .about-us-text {
+        width: fit-content;
+        margin-top: -12rem !important;
+    }
+
+    .about-us-text-head {
+        margin-top: 13rem;
+        position: relative;
+        margin-left: 6rem;
+        width: 15rem;
+        font-size: 1.8rem;
+        font-weight: 700;
+    }
+
+    .about-us-text {
+        position: relative;
+        margin-bottom: 6rem !important;
+    }
+
+    .about-us-text-2 {
+        margin-left: -3.5rem;
+        margin-top: 15rem !important;
+        width: 20rem;
+        font-size: 1rem !important;
+    }
+
+    .head-text {
+        text-align: center;
+        width: fit-content;
+        margin-bottom: 1rem !important;
+    }
+
+    #products {
+        height: fit-content;
+    }
+    .product-container>h2{
+        position: relative;
+        left: -1rem;
+    }
+    .product-container>h3 {
+        font-size: large;
+        text-align: center;
+        margin-bottom: 0.5rem;
+        position: relative;
+        left: -1rem;
+        
+    }
+
+    .product-container>p {
+        text-align: center;
+        width: 90%;
+    }
+
+    .product-head-text {
+        margin: auto;
+        text-align: center !important;
+    }
+
+    .product-cards {
+        position: relative;
+        left: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    .shop-item-button {
+        position: relative;
+        width: fit-content;
+        display: flex;
+        top: 0 !important;
+        left: 15rem !important;
+    }
+
+    .see-more-btn {
+        position: relative;
+        display: flex;
+        right: -15rem !important;
+        width: fit-content;
+    }
+
+    .testamonial-head {
+        margin-top: 2rem;
+    }
+
+    .testamonial-head>h2 {
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    .testamonial-head>h3 {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    .testamonial-contet {
+        width: fit-content;
+    }
+
+    .mySwiper,
+    .swiper-slide {
+        margin-top: auto;
+    }
+
+    .testamonial {
+        margin-top: auto;
+    }
+
+    .contactus-head {
+        margin-top: auto;
+    }
+
+    .contactus-head>p {
+        font-size: 1.5rem;
+    }
+
+    .contact-text {
+        width: 15rem;
+        font-size: 2rem;
+        
+    }
+    .screen:after {
+        width: 128%;
+        height: 122%;
+        margin-left: -2.2rem;
+    }
+    .screen-body-item.left {
+        margin: auto;
+    }
+    .screen-body-item{
+        margin: -2rem;
+        margin-bottom: 1rem;
+        padding: auto;
+    }
+    
+    .contact-item-container {
+        display: flex;
+        position: relative;
+        width: 100% !important;
+        height: 70% !important;
+    }
+
+   
+    .screen{
+        margin-top: -1rem;
+    }
+}
 
 /*laptop (M)*/
 @media all and (min-width: 768px) and (max-width: 1024px) {}
